rename project and add some basic index html file

--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -14,7 +14,7 @@
 
     &.horizontal {
         
-         @include center(true, false); first value set to true, sec set to false see below
+         @include center(true, false); first value set to true, secound set to false see below
         
     }
 
