--- a/src/sass/_scaffolding.scss
+++ b/src/sass/_scaffolding.scss
@@ -3,7 +3,7 @@ html {
   font: $font-style $font-variant $font-weight #{$font-size}/#{$line-height} $font-family;
 }
 
-// Vertically center anything flex option
+// Vertically center anything flex option see mixins for more advance solutions
 .vertical-center {
   display: flex;
   align-items: center;
