add a bunch of new stuff

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,15 @@
 /* Main SCSS File  should contain just imports */
 
-// Base
+/// Base
 @import "variables";
+@import "base";
 
-// Components
+/// Components
 @import "scaffolding";
+
+
+
+
+body {
+	background: purple;
+}
