--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,4 @@
-// Define Typography
+/// Here We Define Typography
 
 $font-style: normal;
 $font-variant: normal;
@@ -7,3 +7,4 @@ $font-color: #333;
 $font-size: 1rem;
 $line-height: 1.5;
 $font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+
