--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,9 +1,6 @@
-/* Main SCSS File  should contain just imports */
-
-/// Base
+//Maria Kovacs
 @import "variables";
 @import "base";
-
 /// Components
 @import "scaffolding";
 
