some changes just for testing pro

--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -4,7 +4,7 @@
 /// you just need to define true or false depending on the centering you need
 /// The parent element should have the position set to relative
 ///
-/// @author Christ Coyer codepen 
+/// @author Christ C
 ///
 /// @example center foo 
 /// 
