--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,9 +1,39 @@
-/// Here We Define Typography
-$font-style: normal;
-$font-variant: normal;
-$font-weight: normal;
-$font-color: #333;
-$font-size: 1rem;
-$line-height: 1.5;
-$font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+/* Variables 
+ *========================
+ *
+ *
+ *Boiler-Nude Confitguration
+ 
+ 
+ 
+ 
+ /*Structure*/
+ 
+$x-small: 600px;
+$small: 800px;
+$medium: 1000px;
+$large: 1200px; 
+
+
+//Breakpoints 
+$mobile: $x-small;
+$desktop: $medium;
+
+//colors
+$background:#fff;
+$primary-color: #C59A6E;
+$secondary-color: #EAE9E4;
+$font-color:#02020a;
+$accent-color: #3a506b;
+$background-secondary: #e8e6e8;
+$link-color: $primary-color;
+$link-hover-color:$accent-color;
+$highlight-color: #1c2541;
+
+
+
+
+
+ 
+ 
 
