--- a/src/sass/_scaffolding.scss
+++ b/src/sass/_scaffolding.scss
@@ -1,6 +1,6 @@
 // Define typography
 html {
-  font: $font-style $font-variant $font-weight #{$font-size}/#{$line-height} $font-family;
+  //font: $font-style $font-variant $font-weight #{$font-size}/#{$line-height} $font-family;
 }
 
 // Vertically center anything flex option see mixins for more advance solutions
